# myco-planner

./: .cookie.example  .gitignore  CLAUDE.md  README.md  config.json  config.json.example  fetch_calendar.py  main.py  pyproject.toml  requirements.txt  scraper.py  scraper_selenium.py  test_ollama.py
.cursor/rules/: my-planner-rules.mdc
planning/: PLANNING_101.md  PROJECT_BASICS.md  calendar_feed_integration_plan.md  calendar_fetch_spike_plan.md  config_refactoring_plan.md  human_planning.md  ollama_gemma3_test_plan.md  scrapegraph_ai_integration_plan.md
