[project]
name = "myco-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "scrapegraph-py>=1.41.0",
    "scrapegraphai>=1.64.0",
    "selenium>=4.38.0",
]
