[project]
name = "myco-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ics>=0.7.2",
    "ollama>=0.4.4",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "selenium>=4.38.0",
]
